// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoFrame should render VideoFrame component with props 1`] = `
<div
  className="videoFrame"
>
  <iframe
    allowFullScreen={true}
    className="iframe"
    frameBorder="0"
    src="https://www.youtube.com/embed/trailerKey"
    title="trailer"
  />
  <button
    className="btn"
    data-id="video-frame-btn"
    onClick={[MockFunction]}
    type="button"
  >
    ✘
  </button>
</div>
`;

exports[`VideoFrame should render VideoFrame component without props 1`] = `
<div
  className="videoFrame"
>
  <iframe
    allowFullScreen={true}
    className="iframe"
    frameBorder="0"
    src="https://www.youtube.com/embed/"
    title="trailer"
  />
  <button
    className="btn"
    data-id="video-frame-btn"
    onClick={[MockFunction]}
    type="button"
  >
    ✘
  </button>
</div>
`;
